[gd_scene load_steps=13 format=3 uid="uid://cily8ku4w8g3p"]

[ext_resource type="Script" path="res://UI/game_over_ui.gd" id="1_tvevt"]
[ext_resource type="Texture2D" uid="uid://wu0515gngere" path="res://Addons/Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_uwiue"]
[ext_resource type="Texture2D" uid="uid://c8n2qv4wmiuuk" path="res://Addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="2_lqsru"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uvklx"]
texture = ExtResource("1_uwiue")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2

[sub_resource type="SystemFont" id="SystemFont_fsc7w"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_7i1bg"]
font = SubResource("SystemFont_fsc7w")
font_size = 42
font_color = Color(0.5, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c886b"]
texture = ExtResource("2_lqsru")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_6iqyl"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_3kla8"]
font = SubResource("SystemFont_6iqyl")
font_size = 24
font_color = Color(0, 0, 0, 0.811765)

[sub_resource type="Animation" id="Animation_yysw0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottonPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(346, 402)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TopPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(356, 51)]
}

[sub_resource type="Animation" id="Animation_ytfpi"]
resource_name = "default"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.203063, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.839216)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottonPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7, 2),
"transitions": PackedFloat32Array(0.406126, 1),
"update": 0,
"values": [Vector2(346, 770), Vector2(346, 402)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TopPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.31864, 1),
"update": 0,
"values": [Vector2(356, -149), Vector2(356, 51)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xnjri"]
_data = {
"RESET": SubResource("Animation_yysw0"),
"default": SubResource("Animation_ytfpi")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_tvevt")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 356.0
offset_top = 51.0
offset_right = 796.0
offset_bottom = 155.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_uvklx")

[node name="GameoverLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -43.0
offset_right = 121.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_7i1bg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottonPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 346.0
offset_top = 402.0
offset_right = 806.0
offset_bottom = 572.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_c886b")

[node name="CenterContainer" type="CenterContainer" parent="BottonPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -45.0
offset_right = 118.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="BottonPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25
columns = 2

[node name="Label" type="Label" parent="BottonPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time survived: "
label_settings = SubResource("LabelSettings_3kla8")

[node name="timeLabel" type="Label" parent="BottonPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "14:00"
label_settings = SubResource("LabelSettings_3kla8")

[node name="Label2" type="Label" parent="BottonPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monster defeated: "
label_settings = SubResource("LabelSettings_3kla8")

[node name="monsterLabel" type="Label" parent="BottonPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "144"
label_settings = SubResource("LabelSettings_3kla8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_xnjri")
}
autoplay = "default"
